# Fuzzer---Automated-and-Randomised-Tester

./: .gitignore  .mutations.py.swp  Dockerfile  README.md  fuzzer.py  main.py  mutations.py  patterns.py  pyproject.toml  run_fuzzer.sh  send.py  writeup.md
binaries/: csv1  csv2  jpg1  json1  json2  plaintext1  plaintext2  plaintext3  xml1  xml2  xml3
example_inputs/: csv1.txt
fuzzers/: csv_fuzzer.py  jpeg_fuzzer.py  json_fuzzer.py  plaintext_fuzzer.py  template_fuzzer.py  xml_fuzzer.py
fuzzers/jpeg_fuzzer/: exif.py  helper.py  jpeg.py  jpeg_fuzzer.py  jpeg_parser.py  test.py  test_fuzz.py  test_mutate.py  test_parse.py
outputs/: error_report.txt  manual_input.txt  output_mutations.txt
test_binaries/: buffer_overflow1  buffer_overflow1.c  buffer_overflow2  buffer_overflow2.c  integer_overflow1  integer_overflow1.c  integer_overflow2  integer_overflow2.c  integer_overflow2.txt  sleep  sleep.c
