[project]
name = "comp6447-fuzzer"
version = "0.1.0"
description = "old fuzzer"
authors = [
    {name = "robbie-seymour",email = "xxx360noscoperobseyssbxxx@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-magic (>=0.4.27,<0.5.0)",
    "libmagic (>=1.0,<2.0)",
    "python-magic-bin (>=0.4.14,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
